[tool.poetry]
name = "volman"
version = "0.1.0"
description = "Volunteer Management System"
authors = ["Jason DeCorte"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
flask-appbuilder = "^4.5.1"
flask-alembic = "==2.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
